Closed Bug 1657087 Opened 4 years ago Closed 4 years ago

Logic error in OOM check in nsStyleImageLayers::operator=(nsStyleImageLayers&& aOther)

Categories

(Core :: CSS Parsing and Computation, defect)

defect

Tracking

()

RESOLVED FIXED
81 Branch
Tracking Status
firefox81 --- fixed

People

(Reporter: sg, Assigned: sg)

Details

Attachments

(1 file)

nsStyleImageLayers::operator=(nsStyleImageLayers&& aOther) contains a check for an OOM condition, which cannot occur here, and furthermore checks for it in a wrong way.

The copy assignment operator nsStyleImageLayers::operator=(cons tnsStyleImageLayers& aOther) is correct in this regard, but also relies on implementation details to detect the OOM condition.

This should be improved by providing proper fallible operations on nsStyleAutoArray rather that checking indirectly for OOM conditions.

Pushed by sgiesecke@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/85764389f706
Fix fallible behaviour of nsStyleAutoArray and nsStyleImageLayers. r=emilio
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: