Bug 1657087 - Fix fallible behaviour of nsStyleAutoArray and nsStyleImageLayers. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D85850